# cloudsdale

./: .gitattributes  .gitignore  Cargo.toml  Dockerfile  LICENSE  Makefile  README.md  build.py  build.rs  cloudsdale.go  cmd.py  config.json  config.yml  global.go  go.mod  go.sum  main.go  make.py  run.py  rustfmt.toml  test.go
.github/workflows/: binaries.yml  codecov.yml  docker.yml  snapshot.yml
api/: docs.go  swagger.json  swagger.yaml
assets/: banner.txt  default.json  embed.go
assets/statics/: banner.txt
assets/templates/: flag.txt
client/: .env.development  .eslintrc  index.html  package.json  vite.config.ts
client/src/: App.tsx  emotion.d.ts  main.tsx
cmd/cloudsdale/: main.go
cmd/pgshub/: controllers.go  db.go  main.go  middlewares.go  repositories.go  services.go  welcome.go
config/: application.json  database.go
container/: docker.go  docker_container.go
containers/managers/: docker_manager.go
containers/providers/: docker_provider.go
controller/: app_controller.go  asset_controller.go  asset_controller_impl.go  challenge_controller.go  challenge_controller_impl.go  config_controller.go  config_controller_impl.go  container_controller.go  group_controller.go  group_controller_impl.go  instance_controller.go  instance_controller_impl.go  team_controller.go  team_controller_impl.go  user_controller.go  user_controller_impl.go  user_group_controller.go
controller/m2m/: user_group_controller.go  user_group_controller_impl.go
controllers/: app_controller.go  asset_controller.go  category_controller.go  challenge_controller.go  config_controller.go  controllers.go  game_controller.go  instance_controller.go  media_controller.go  pod_controller.go  submission_controller.go  team_controller.go  user_controller.go
deploy/: docker-compose.yml
deploys/: docker-compose.dev.yml  docker-compose.yml  mysql.yml  postgres.yml
docs/: .gitignore  docs.go  mkdocs.yml  package.json  requirements.txt  swagger.json  swagger.yaml
docs/en/: index.md
docs/pages/: index.md
docs/zh/: index.md
embed/: application.json  default.json  k8s-config.yml
embed/configs/: application.json  platform.json
embed/statics/: banner.txt
example/: application.toml  application.yml
globals/: docker.go  instance.go
hubs/: game_hub.go  hubs.go
internal/: global.go
internal/app/: app.go
internal/assets/: assets.go
internal/cache/: cache.go  memory.go  redis.go
internal/captcha/: captcha.go  recaptcha.go  turnstile.go
internal/casbin/: casbin.go  policy.go
internal/config/: application.go  config.go  platform.go  signature.go
internal/controller/: category.go  challenge.go  config.go  controller.go  game.go  group.go  group_controller.go  media.go  pod.go  proxy.go  submission.go  team.go  user.go  user_controller.go
internal/controllers/: app_controller.go  asset_controller.go  asset_controller_impl.go  challenge_controller.go  challenge_controller_impl.go  config_controller.go  config_controller_impl.go  game_controller.go  instance_controller.go  instance_controller_impl.go  submission_controller.go  team_controller.go  team_controller_impl.go  user_controller.go  user_controller_impl.go
internal/database/: category.go  database.go  group.go
internal/embed/: embed.go
internal/files/: files.go
internal/global/: const.go
internal/hub/: game.go  hub.go
internal/logger/: encoder.go  logger.go
internal/middleware/: auth.go  casbin.go  frontend.go  middleware.go
internal/middlewares/: auth.go  auth_middleware.go  frontend.go  frontend_middleware.go
internal/model/: article.go  category.go  challenge.go  container.go  env.go  file.go  flag.go  flag_gen.go  game.go  game_challenge.go  game_event.go  game_team.go  group.go  hint.go  image.go  instance.go  jeopardy_game.go  nat.go  notice.go  permission.go  pod.go  port.go  submission.go  team.go  team_game.go  user.go  user_team.go  webhook.go
internal/proxy/: pod.go  proxy.go  tcp.go  ws.go
internal/repositories/: app_repository.go  challenge_repository.go  instance_repository.go  (+3 more)
locales/: zh_CN.yaml
middleware/: auth.go  frontend.go  static_serve.go
middlewares/: app_middleware.go  auth_middleware.go  frontend_middleware.go  middlewares.go
repositories/: app_repository.go  category_repository.go  challenge_repository.go  container_repository.go  env_repository.go  flag_gen_repository.go  flag_repository.go  game_repository.go  image_repository.go  instance_repository.go  nat_repository.go  pod_repository.go  port_repository.go  repositories.go  submission_repository.go  team_repository.go  user_repository.go
repository/: app_repository.go  challenge_repository.go  challenge_repository_impl.go  group_repository.go  group_repository_impl.go  team_repository.go  team_repository_impl.go  user_repository.go  user_repository_impl.go
router/: app_router.go  asset_router.go  challenge_router.go  config_router.go  group_router.go  instance_router.go  team_router.go  user_router.go
routers/: app_router.go  asset_router.go  challenge_router.go  config_router.go  game_router.go  instance_router.go  media_router.go  pod_router.go  routers.go  submission_router.go  team_router.go  user_router.go
scripts/: buildtool.py
service/: app_service.go  challenge_service.go  challenge_service_impl.go  config_service.go  config_service_impl.go  container_service.go  group_service.go  group_service_impl.go  instance_service.go  instance_service_impl.go  team_service.go  team_service_impl.go  user_service.go  user_service_impl.go
services/: app_service.go  asset_service.go  category_service.go  challenge_service.go  config_service.go  container_service.go  game_service.go  image_service.go  instance_service.go  media_service.go  mixin_service.go  pod_service.go  services.go  submission_service.go  team_service.go  user_service.go
sql/: create.sql
src/: main.rs  traits.rs
utils/: calculate.go  cfg.go  config.go  db.go  info.go  jwt.go  logger.go  redis.go  resp.go  validate.go  welcome.go
web/: .env.production  .prettierrc  index.html  package.json  tsconfig.json  vite.config.ts
(+780 files in other folders)
