[package]
name = "cloudsdale"
version = "0.0.1"
edition = "2021"
description = "The Cloudsdale project is an open-source, light weight, Jeopardy-style's CTF platform."

[dependencies]
axum = { version = "0.7", features = [
    "ws",
    "http2",
    "multipart",
    "macros",
    "tower-log",
    "tracing",
    "json",
] }
axum-extra = { version = "0.9", features = [
    "typed-header",
    "query",
    "multipart",
    "typed-routing",
    "async-read-body",
] }
futures = { version = "^0.3" }
futures-util = { version = "^0.3" }
tokio = { version = "1.38", features = ["full"] }
tower = { version = "0.4" }
tower-http = { version = "0.5", features = ["cors", "fs", "trace"] }
serde = { version = "1.0", features = ["derive"] }
tracing = { version = "0.1" }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
uuid = { version = "1.8", features = ["v4", "fast-rng", "macro-diagnostics"] }
sea-orm = { version = "0.12", features = [
    "sqlx-mysql",
    "sqlx-postgres",
    "sqlx-sqlite",
    "debug-print",
    "with-uuid",
    "macros",
    "with-json",
    "runtime-tokio-rustls",
] }
sea-orm-migration = { version = "0.12" }
chrono = { version = "0.4" }
serde_json = { version = "1.0" }
bollard = "*"
bcrypt = "0.15.1"
once_cell = "1.19.0"
jsonwebtoken = { version = "9.3.0" }
prometheus = "0.13.4"
regex = "1.10.5"
thiserror = { version = "1.0" }
mime = { version = "0.3" }
validator = { version = "0.18", features = ["derive"] }
wsrx = { version = "0.2", features = ["server"] }
serde_yaml = "0.9.34"
kube = { version = "0.93", features = ["runtime", "derive"] }
k8s-openapi = { version = "0.22", features = ["latest"] }
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }
async-trait = { version = "0.1" }
ring = { version = "0.17" }
rustls = { version = "0.23", features = ["ring"] }

[build-dependencies]
chrono = { version = "0.4" }

[[bin]]
name = "cloudsdale"
path = "src/main.rs"
